--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,14 @@
     appropriate description and 'tag' them for categorization and fast searching
     for easier log management."
     />
+    <meta name="tile" property="og:title" content="Tag-A-Log" />
+    <meta property="og:type" content="Application" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/49889392411_7e2cd52f52_h.jpg"
+    />
+    <meta name="author" content="Anthony Clark Pefecto" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
